# proxy-cli

./: .gitignore  Cargo.toml  FIX_VERIFICATION_REPORT.md  PROJECT_DESIGN.md  README.md  TECHNICAL_BLOG.md  install.ps1  proxy_function.ps1  setup.bat  verify_wrapper.ps1  wrapper_draft.ps1
.github/workflows/: build.yml  release.yml
src/: config.rs  installer.rs  main.rs  message.rs  proxy.rs  ui.rs
