[package]
name = "proxy-cli"
version = "0.0.4"
edition = "2021"
description = "Session-level HTTP/HTTPS proxy manager (Rust edition)"
authors = ["2e41e462ac41d481ebfbbb2465242a976de4596b89b94e2c672b66b26454d0b3"]
license = "GPL-3.0"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
dirs = "5.0"
thiserror = "1.0"
dialoguer = "0.11"