[package]
name = "proxy-cli"
version = "0.0.5"
edition = "2021"
description = "Session-level HTTP/HTTPS proxy manager (Rust edition)"
authors = ["2e41e462ac41d481ebfbbb2465242a976de4596b89b94e2c672b66b26454d0b3"]
license = "GPL-3.0"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8" }
crossterm = "0.27"
dirs = "5.0"
thiserror = "1.0"
tui = { version = "0.19", features = ["crossterm"] }
socket2 = "0.5"
isahc = "1.7"
colored = "2.0"
once_cell = "1.18"
dialoguer = "0.12.0"
serde_json = "1.0.145"
directories = "6.0.0"
console = "0.16.1"
